tdf#125551 PPTX export: correct position and size of diagrams

Save position and size of diagram background instead of whole group shape.
Some diagrams contain shapes that are outside these boundaries. That caused
diagram to grow and move.

Change-Id: I909c13a5dc268f77832234b3884b91292922823c